# sesameai-tts

./: .gitignore  README.md  README_storyteller.md  audio_to_text.py  get_answer.py  gputest.py  hello.py  ogwebapp.py  pyproject.toml  requirements.txt  runme.py  samples.py  story.py  test.py  tts_service.py  web_app.py  web_chat.py  web_storyteller.py  web_vchat.py
sesameai/: __init__.py  generator.py  models.py
utils/: cli_args.py  tts_base.py  tts_utils.py  web_base.py
