[project]
name = "sesameai-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.3",
    "huggingface-hub==0.28.1",
    "moshi==0.2.2",
    "pyyaml>=6.0.2",
    "setuptools>=76.1.0",
    "silentcipher",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "torchao==0.9.0",
    "torchaudio==2.4.0",
    "torchtune==0.4.0",
    "transformers==4.49.0",
    "triton>=3.0.0",
    "yml>=0.0.1",
]

[tool.uv.sources]
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher", rev = "master" }
